--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2772,19 +2772,22 @@
     padding: 0% 0% 0% 37%;
   }
 
-  img.heart1 {
-    width: 45%;
-    border: 1px solid;
+  .heart1 {
+    width: 100%;
     border-radius: 50%;
     padding: 10% 10% 10% 10%;
-  }
+    color: #3c3fb1 !important;
+    font-size: 90px !important;
+    background-color: #a8a8d5;
+    box-shadow: 0px 0px 9px 5px rgb(156 150 196);
+}
 
   .Register {
     font-size: 20px;
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
@@ -2793,12 +2796,12 @@
     margin-left: 5%;
   }
 
-  .lastercar1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-  }
+.lastercar1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
   h3.address {
     font-size: 32px;
@@ -2913,7 +2916,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -4219,12 +4222,15 @@
 
   section.rides-register-daily {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
   }
-
+  
   .rides {
-    width: 90%;
-    margin-left: 5%;
+    width: 93%;
+    margin-left: 3.5%;
+    background-color: #c5fdf3;
+    padding: 2% 0;
+    border-radius: 2.5rem;
   }
 
   .register {
@@ -4247,33 +4253,36 @@
     padding: 0% 0% 0% 37%;
   }
 
-  img.heart1 {
-    width: 45%;
-    border: 1px solid;
+  .heart1 {
+    width: 100%;
     border-radius: 50%;
     padding: 10% 10% 10% 10%;
-  }
+    color: #3c3fb1 !important;
+    font-size: 90px !important;
+    background-color: #a8a8d5;
+    box-shadow: 0px 0px 9px 5px rgb(156 150 196);
+}
 
   .Register {
     font-size: 20px;
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
-  .carlatest {
-    width: 100%;
-    margin-left: 0%;
-  }
+.carlatest {
+  width: 93%;
+  margin-left: 3.5%;
+}
 
-  .lastercar1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-  }
+.lastercar1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
   h3.address {
     font-size: 32px;
@@ -4387,7 +4396,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -5681,12 +5690,15 @@
 
   section.rides-register-daily {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
   }
-
+  
   .rides {
-    width: 90%;
-    margin-left: 5%;
+    width: 93%;
+    margin-left: 3.5%;
+    background-color: #c5fdf3;
+    padding: 2% 0;
+    border-radius: 2.5rem;
   }
 
   .register {
@@ -5708,32 +5720,37 @@
     padding: 0% 0% 0% 37%;
   }
 
-  img.heart1 {
-    width: 95%;
-    border: 1px solid;
+  .heart1 {
+    width: 100%;
     border-radius: 50%;
     padding: 10% 10% 10% 10%;
-  }
+    color: #3c3fb1 !important;
+    font-size: 90px !important;
+    background-color: #a8a8d5;
+    box-shadow: 0px 0px 9px 5px rgb(156 150 196);
+}
 
   .Register {
     font-size: 20px;
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
-  .carlatest {
-    width: 100%;
-    margin-left: 0%;
-  }
+.carlatest {
+    width: 93%;
+    margin-left: 3.5%;
+    background-color: #99dbf5;
+    border-radius: 2.5rem;
+}
 
   .lastercar1 {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
   }
 
   h3.address {
@@ -5848,7 +5865,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -7092,12 +7109,15 @@
 
   section.rides-register-daily {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
   }
-
+  
   .rides {
-    width: 90%;
-    margin-left: 5%;
+    width: 93%;
+    margin-left: 3.5%;
+    background-color: #c5fdf3;
+    padding: 2% 0;
+    border-radius: 2.5rem;
   }
 
   .register {
@@ -7119,33 +7139,36 @@
     padding: 0% 0% 0% 37%;
   }
 
-  img.heart1 {
-    width: 95%;
-    border: 1px solid;
+  .heart1 {
+    width: 100%;
     border-radius: 50%;
     padding: 10% 10% 10% 10%;
-  }
+    color: #3c3fb1 !important;
+    font-size: 90px !important;
+    background-color: #a8a8d5;
+    box-shadow: 0px 0px 9px 5px rgb(156 150 196);
+}
 
   .Register {
     font-size: 20px;
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
-  .carlatest {
-    width: 100%;
-    margin-left: 0%;
-  }
+.carlatest {
+  width: 93%;
+  margin-left: 3.5%;
+}
 
-  .lastercar1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-  }
+.lastercar1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
   h3.address {
     font-size: 32px;
@@ -7259,7 +7282,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -8587,12 +8610,15 @@
 
   section.rides-register-daily {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
   }
-
+  
   .rides {
-    width: 90%;
-    margin-left: 5%;
+    width: 93%;
+    margin-left: 3.5%;
+    background-color: #c5fdf3;
+    padding: 2% 0;
+    border-radius: 2.5rem;
   }
 
   .register {
@@ -8613,12 +8639,15 @@
     margin-left: 4%;
   }
 
-  img.heart1 {
-    width: 95%;
-    border: 1px solid;
+  .heart1 {
+    width: 100%;
     border-radius: 50%;
     padding: 10% 10% 10% 10%;
-  }
+    color: #3c3fb1 !important;
+    font-size: 90px !important;
+    background-color: #a8a8d5;
+    box-shadow: 0px 0px 9px 5px rgb(156 150 196);
+}
 
   .Register {
     font-size: 20px;
@@ -8626,21 +8655,21 @@
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
-  .carlatest {
-    width: 100%;
-    margin-left: 0%;
-  }
+.carlatest {
+  width: 93%;
+  margin-left: 3.5%;
+}
 
-  .lastercar1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-  }
+.lastercar1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
   h3.address {
     font-size: 32px;
@@ -8754,7 +8783,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -9825,17 +9854,17 @@
   }
 
   .CarCarry {
-    width: 100%;
     margin-top: 6%;
   }
 
   .display {
     width: 100%;
+    margin-left: 0;
   }
 
   .car1-carry {
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
   }
 
   h1.aboutofcar {
@@ -9854,7 +9883,7 @@
 
   .car-carry {
     width: 90%;
-    margin-left: 10%;
+    margin-left: 5%;
   }
 
   .car2-carry,
@@ -9862,7 +9891,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 1%;
+    margin-bottom: 2.5%;
   }
 
   .car-carry2,
@@ -9872,12 +9901,17 @@
     width: 43%;
     background-color: white;
     border: 1px solid #ede7e79c;
-    padding: 3% 3% 3% 3%;
+    padding: 2% 3% 2% 3%;
   }
 
   .icon1-car,
   .icon2-car {
-    padding: 0% 1% 5% 1%;
+    padding: 3% 1% 3% 1%;
+  }
+
+  .icon1-car, .icon2-car{
+    width: 20% !important;
+    height: 45px;
   }
 
   .control1car,
@@ -9985,21 +10019,21 @@
   }
 
   section.Latest-rentals {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
   }
 
-  .carlatest {
-    width: 100%;
-    margin-left: 0%;
-  }
+.carlatest {
+  width: 93%;
+  margin-left: 3.5%;
+}
 
-  .lastercar1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-  }
+.lastercar1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
   h3.address {
     font-size: 32px;
@@ -10113,7 +10147,7 @@
     display: inline-block;
   }
 
-  img.svg-car {
+  span.svg-car {
     width: 20%;
     margin: 0% -5% -8% 0%;
   }
@@ -10619,6 +10653,23 @@
   .flexses2 {
     display: none;
   }
+
+  span.imgclients {
+    font-size: 310px;
+    color: #7a7171;
+  }
+
+  p.pofyou{
+    font-size: 15px;
+  }
+
+  p.passenger1{
+    width: 45% !important;
+  }
+
+  div#links-condition{
+    width: 20% !important;
+  }
 }
 
 @media screen and (max-width:1555px) and (min-width:1496px) {
@@ -11025,6 +11076,11 @@
     display: none;
   }
 
+  span.imgclients {
+    font-size: 310px;
+    color: #7a7171;
+  }
+
 }
 
 @media screen and (max-width:1760px) and (min-width: 1555px) {
@@ -11194,6 +11250,28 @@
     text-align: center;
   }
 
+  .show {
+    display: block !important;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #827ddd;
+    width: 16%;
+    box-shadow: 0px 8px 16px 0px rgb(2 2 2 / 20%);
+    border-radius: 2.5rem;
+    z-index: 1;
+    right: 6%;
+    top: 6%;
+  }
+
+  .padding-content {
+    padding: 1% 7% 1% 7%;
+    border: 5px solid yellowgreen;
+    border-radius: 2.5rem;
+  }
+
   ul.list-top-Nav {
     display: flex;
   }
@@ -11332,6 +11410,37 @@
     width: 100%;
     margin-top: 1%;
     color: red;
+  }
+
+  .MEDIA {
+    display: none;
+  }
+
+  img.img1-car {
+    border-radius: 3%;
+    width: 100%;
+  }
+  
+  span.day-car {
+    border-radius: 35px 0 0 35px;
+    color: #fff;
+    background: #f75f62;
+    display: inline-block;
+    font-size: 16px;
+    padding: 5px 15px 5px 25px;
+    position: absolute;
+    right: 1px;
+    top: 2px;
+  }
+  
+  span.day-car::before {
+    border-bottom: 10px solid transparent;
+    border-left: 23px solid #d2161a;
+    border-right: 6px solid transparent;
+    bottom: -10px;
+    content: "";
+    position: absolute;
+    right: -7px;
   }
 }
 
