--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body {
   padding: 0;
   font-size: 14px;
   color: #495060;
-  font-family: sans-serif;
+  font-family: 'Cairo', sans-serif;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Noto Sans Mahajani', sans-serif;
 }
 
 h1,
@@ -19,13 +21,11 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: sans-serif;
 }
 
 ul,
 ol {
   margin-bottom: 0;
-  font-family: sans-serif;
   list-style: none;
   padding: 0;
 }
@@ -35,7 +35,6 @@ p {
   line-height: 30px;
   margin: 0;
   font-weight: 400;
-  font-family: sans-serif;
   color: #666;
 }
 
@@ -333,6 +332,7 @@ h1.border-William {
   background-color: #827ddd;
   width: 16%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 2.5rem;
   z-index: 1;
   right: 6%;
   top: 5%;
@@ -341,6 +341,7 @@ h1.border-William {
 .padding-content {
   padding: 1% 7% 1% 7%;
   border: 5px solid yellowgreen;
+  border-radius: 2.5rem;
 }
 
 .padding-content>span {
@@ -671,27 +672,22 @@ a.slider3:hover {
 }
 
 .SECTIONONE,
-section.navsection,
 .nav1-section,
 .nav3-section,
-.link4section,
-.link1-section span,
-.nav3-section .link5-section span,
-.nav3-section {
+.link4section {
   width: 100%;
 }
 
 section.navsection {
   position: relative;
-  background-color: #793fdf;
+  background-color: #06f5c93b;
   border-radius: 1.5rem;
-  width: 90%;
-  margin-left: 5%;
+  width: 93%;
+  margin: 2% 3.5%;
 }
 
 .section-three,
 .nav1-section,
-.nav3-section,
 .link4section,
 a.link-section-three,
 .nav2-section button {
@@ -700,45 +696,46 @@ a.link-section-three,
   align-items: center;
 }
 
-.section-three,
-input#from,
-input#to {
-  width: 90%;
-}
-
 .section-three {
-  margin-left: 5%;
+  width: 90%;
+  margin-left: 3.5%;
   padding: 2% 2%;
 }
 
 .sections-three {
-  width: 40%;
+  width: 93%;
   border: 2px blue solid;
   line-height: 30px;
   padding: 1% 1%;
-  background-color: #a0bdaf;
+  background-color: #99DBF5;
   border-radius: 1.5rem;
 }
 
-.link1-section,
-.link1section,
-.link5-section,
-.link3section {
-  width: 45%;
+.nav1-section {
+  margin: 0 0 4% 0;
 }
 
-.link1-section span,
-.nav3-section .link5-section span {
+.link1-section {
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  font-size: 17px;
+}
+
+.link1-section span {
   display: inline-block;
+  width: 35% !important;
 }
 
 a.link-section-three {
-  width: 80%;
-  height: 30px;
-  color: white;
-  background-color: #0553d0;
+  width: 100%;
+  height: 50px;
+  color: grey;
+  font-size: 40px;
+  font-weight: 900;
+  /* background-color: #0553d0; */
   border-radius: 5%;
-  transition: 2s;
+  /* /* transition: 2s; */
 }
 
 a.link-section-three:hover {
@@ -747,31 +744,37 @@ a.link-section-three:hover {
 }
 
 .nav2-section {
-  margin: 5% 0%;
-  width: 100%;
+  margin: 2.5% 0 2% 4.5%;
+  width: 91%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 input#from,
 input#to {
+  width: 34%;
   display: inherit;
   border: none;
   outline: none;
-  padding: 6% 4%;
-  margin: 5% 0;
-  background-color: antiquewhite;
+  border-radius: 5px;
+  padding: 1.5% 3%;
+  margin: 0;
+  background-color: #f9f9f9;
   color: #6900ef;
-  font-size: 15px;
+  font-size: 23px;
 }
 
 .nav2-section button {
   border: none;
   outline: none;
-  height: 40px;
-  width: 28%;
-  margin: 5% 0;
-  background-color: antiquewhite;
-  color: #6900ef;
-  font-size: 15px;
+  border-radius: 2.5rem;
+  height: 50px;
+  width: 15%;
+  margin: 0;
+  background-color: #637ff9;
+  color: #f9f9f9;
+  font-size: 25px;
   cursor: pointer;
 }
 
@@ -785,16 +788,27 @@ input#to {
   text-decoration-line: revert;
 }
 
-.display {
+/* section CarCarry */
+
+section.CarCarry {
   width: 100%;
+  background-color: #99DBF5;
+}
+
+.index-margin {
+  margin-top: 3%;
+}
+
+.display {
+  width: 95%;
+  margin-left: 2.5%;
+  padding: 1% 0;
 }
 
 .car1-carry {
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
-
-
 
 h1.aboutofcar {
   font-size: 32px;
@@ -820,7 +834,7 @@ h5.aboutofcar {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1%;
+  margin-bottom: 3%;
 }
 
 .car-carry2,
@@ -828,14 +842,21 @@ h5.aboutofcar {
   display: flex;
   align-items: center;
   width: 43%;
-  background-color: white;
+  background-color: #DDE6ED;
   border: 1px solid #ede7e79c;
-  padding: 3% 3% 3% 3%;
+  border-radius: 2.5rem;
+  padding: 3% 2% 3% 3%;
 }
 
 .icon1-car,
 .icon2-car {
-  padding: 0% 1% 5% 1%;
+  border: 2px solid #146C94;
+  border-radius: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  height: 90px;
 }
 
 .control1car,
@@ -848,34 +869,42 @@ i.fa-solid.fa-handshake,
 i.fa-solid.fa-person-chalkboard,
 i.fa-regular.fa-star {
   font-size: 50px;
-  color: #303747;
+  color: #146C94;
 }
 
 p.control1-car,
 p.control2-car {
   font-size: 17px;
   font-weight: bolder;
+  color: blueviolet;
 }
 
 p.free1-car,
 p.free2-car {
-  color: #7c8393;
+  color: cornflowerblue;
   font-weight: bold;
 }
 
+/* section CarCarry /*/
+
+/* section CLIENTS */
+
 .CLIENTS {
   width: 100%;
-  margin-top: 6%;
+  margin-top: 4%;
 }
 
 .displayCLIENTS {
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 4.5%;
+  background-color: #06f5c93b;
+  border-radius: 2.5rem;
+  padding: 2% 1%;
 }
 
 .Client1-carry {
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
 
 h1.saysaboutus {
@@ -894,7 +923,7 @@ h5.sayaboutus {
 
 .margintoclients {
   width: 95%;
-  margin-left: 5%;
+  margin-left: 2.5%;
 }
 
 .clientsaysaboutus {
@@ -925,9 +954,14 @@ h5.sayaboutus {
   width: 100%;
 }
 
-img.imgclients {
+/* .imgclients {
   width: 22%;
   height: 200px;
+} */
+
+span.imgclients {
+  font-size: 360px;
+  color: #7a7171;
 }
 
 .pofclients {
@@ -935,9 +969,15 @@ img.imgclients {
 }
 
 p.myname {
-  font-size: 19px;
-  color: #634011;
+  font-size: 25px;
+  color: blueviolet;
   font-weight: 800;
+}
+
+p.pofyou {
+  font-size: 17px;
+  font-weight: bolder;
+  color: cornflowerblue;
 }
 
 ul.clientstar {
@@ -948,11 +988,12 @@ ul.clientstar {
 }
 
 li.starclient {
-  width: 6%;
+  width: 4%;
+  margin: -10px;
 }
 
 .starclient img {
-  width: 95%;
+  width: 60%;
 }
 
 .clicks {
@@ -966,42 +1007,49 @@ li.starclient {
   transition: background-color 0.6s ease;
 }
 
+.nextcients {
+  right: 6%;
+}
+
 .prevcients,
 .nextcients {
   cursor: pointer;
   position: absolute;
-  width: 6%;
+  width: 4%;
   height: 35px;
   display: flex;
   margin-top: -15%;
-  color: yellowgreen;
+  color: black;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   transition: 0.6s ease;
-  background-color: blue;
-  border-radius: 50%;
+  background-color: #fefeff;
+  border-radius: 2.5rem;
   align-items: center;
   justify-content: center;
 }
 
-.nextcients {
-  right: 9%;
-}
-
 .prevcients:hover,
 .nextcients:hover {
-  color: red;
-  background-color: #5ee55ebd;
+  color: #0011ff;
+  background-color: #00BCD4;
 }
+
+/* section CLIENTS /*/
+
+/* section condition-of-the-passenger */
 
 section.condition-of-the-passenger {
   width: 100%;
-  margin-top: 5%;
+  margin-top: 4%;
 }
 
 .condition-passenger {
   width: 90%;
-  margin-left: 5%;
+  margin-left: 4.5%;
+  background-color: #99dbf5;
+  padding: 2% 1%;
+  border-radius: 2.5rem;
 }
 
 .condition1 {
@@ -1009,27 +1057,52 @@ section.condition-of-the-passenger {
   margin-left: 9%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 p.passenger1 {
-  margin-bottom: 4%;
   font-size: 24px;
   font-weight: 700;
-  color: black;
-
+  color: #1322a5;
+  line-height: 27px;
+  background-color: cadetblue;
+  padding: 1%;
+  width: 35%;
 }
 
-.condition1 a {
-  transition: all 0.3s linear 0s;
+div#links-condition {
+  width: 18%;
+  background-color: cadetblue;
+  padding: 1%;
 }
 
-.condition1 a:hover {
-  color: red;
+#link-conditions {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+#link-conditions,
+i.fa-solid.fa-right-long {
+  transition: all 1s linear 0s;
+  color: #171494;
+  font-size: 20px;
+}
+
+#link-conditions:hover {
+  color: #212A3E;
+  margin-left: 10%;
+}
+
+#link-conditions:hover i.fa-solid.fa-right-long {
+  color: #212A3E;
+  margin-left: 2%;
 }
 
 .condition2 {
   width: 90%;
   margin-left: 5%;
+  margin-top: 2%;
 }
 
 .passenger2 {
@@ -1065,22 +1138,31 @@ p.passenger1 {
 }
 
 p.ofthe {
-  font-size: 18px;
+  font-size: 21px;
+  color: #2900ff;
 }
 
 .color {
-  color: #f75f62;
+  color: #793fdf !important;
   font-size: 25px !important;
+  text-decoration-line: underline;
 }
+
+/* section condition-of-the-passenger /*/
+
+/* section rides-register-daily */
 
 section.rides-register-daily {
   width: 100%;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .rides {
-  width: 90%;
-  margin-left: 5%;
+  width: 93%;
+  margin-left: 3.5%;
+  background-color: #c5fdf3;
+  padding: 2% 0;
+  border-radius: 2.5rem;
 }
 
 .register {
@@ -1104,11 +1186,14 @@ section.rides-register-daily {
   margin-left: 6%;
 }
 
-img.heart1 {
-  width: 95%;
-  border: 1px solid;
+.heart1 {
+  width: 100%;
   border-radius: 50%;
   padding: 10% 10% 10% 10%;
+  color: #3c3fb1 !important;
+  font-size: 90px !important;
+  background-color: #a8a8d5;
+  box-shadow: 0px 0px 9px 5px rgb(156 150 196);
 }
 
 .Register {
@@ -1116,20 +1201,22 @@ img.heart1 {
 }
 
 section.Latest-rentals {
-  margin-top: 10%;
+  margin-top: 5%;
   width: 100%;
 }
 
 .carlatest {
-  width: 90%;
-  margin-left: 5%;
+  width: 93%;
+  margin-left: 3.5%;
+  background-color: #99dbf5;
+  border-radius: 2.5rem;
 }
 
 .lastercar1 {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 h3.address {
@@ -1239,7 +1326,7 @@ span.icon-car {
   display: inline-block;
 }
 
-img.svg-car {
+span.svg-car {
   width: 20%;
   margin: 0% -5% -8% 0%;
 }
@@ -3270,8 +3357,8 @@ section#CLIENTS {
   border: 2px solid #2b8fd6;
   border-radius: 2.5rem;
   background: rgb(238, 174, 202);
-  background: radial-gradient(circle, 
-  rgb(160 179 221) 0%, rgb(127 76 227) 100%);
+  background: radial-gradient(circle,
+      rgb(160 179 221) 0%, rgb(127 76 227) 100%);
 }
 
 div#displayCLIENTS {
@@ -3515,7 +3602,7 @@ a.link-tow-words-driver:hover {
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
+  right: 60px;
   z-index: 99;
   font-size: 18px;
   border: none;
