--- a/css/style.css
+++ b/css/style.css
@@ -39,491 +39,264 @@ p {
   color: #666;
 }
 
-a,
-a:hover,
-a:focus,
-a:active {
-  color: inherit;
-  -webkit-text-decoration: none;
-  -moz-text-decoration: none;
-  -ms-text-decoration: none;
-  -o-text-decoration: none;
-  text-decoration: none;
-  transition: 0.5s;
+.navbar-toggler {
+  transition: all 2s;
 }
 
-a:hover {
-  color: red;
+.navbar-toggler:focus {
+  color: blueviolet;
+  box-shadow: none;
 }
 
-.Topbar {
-  width: 100%;
-  border-top: 1px solid white;
+.svg-inline--fa.fa-bars {
+  font-size: 45px;
 }
 
-.topBar {
-  width: 100%;
-  background-color: black;
-  height: 35px;
+ul.show {
+  box-shadow: 0px 0px 11px 2px #b4b4cd;
 }
 
-.Bar {
-  display: flex;
-  height: 100%;
+.nav-link {
+  font-size: 18px;
 }
 
-
-.list-top-par1 {
-  display: flex;
-  width: 80%;
-  padding-left: 7%;
-  display: none;
+.dropdown-item {
+  font-size: 16px;
 }
 
-.list-top-par2 {
-  display: flex;
-  width: 35%;
-  align-items: center;
-  /* padding-left: 7%; */
-}
-
-.list-top-par3 {
-  width: 40%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.point2-top-bar:hover .list1-topp-nav {
-  display: block;
-  opacity: 1;
-  visibility: visible !important;
-  transform: rotate(0deg) !important;
-}
-
-.point-top-bar:hover .list11-topp-nav {
-  display: block;
-  opacity: 1;
-  visibility: visible !important;
-  transform: rotate(0deg) !important;
-}
-
-.list11-topp-nav {
-  padding: 7px 20px;
-  /* margin-top: 3%; */
+.dropdown-toggle::after {
   opacity: 0;
-  display: none;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 35;
-  width: 65px;
-  position: absolute;
-  top: 15%;
-  left: 18%;
-  visibility: hidden !important;
-  /* transform: rotateX(30deg) !important; */
-  transition: opacity 1s, visibility 0.2s !important;
 }
 
-.list1-topp-nav {
-  padding: 7px 20px;
-  /* margin-top: 3%; */
-  opacity: 0;
-  display: none;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 35;
-  width: 65px;
-  position: absolute;
-  right: 31%;
-  visibility: hidden !important;
-  transition: opacity 1s, visibility 0.2s !important;
-}
-
-li.pointtt-top-nav {
-  padding: 18% 1% 15% 1%;
-}
-
-.linkthis {
-  color: black !important;
-}
-
-.linkthis:hover {
-  color: rgb(219, 14, 14) !important;
-}
-
-.point2-top-bar:hover .liist1-topp-nav {
-  display: block;
-  opacity: 1;
-  visibility: visible !important;
-  transform: rotate(0deg) !important;
-}
-
-.point-top-bar:hover .list111-topp-nav {
-  display: block;
-  opacity: 1;
-  visibility: visible !important;
-  transform: rotate(0deg) !important;
-}
-
-.list111-topp-nav {
-  padding: 7px 20px;
-  /* margin-top: 3%; */
-  opacity: 0;
-  display: none;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 35;
-  width: 65px;
-  position: absolute;
-  top: 15%;
-  left: 25%;
-  visibility: hidden !important;
-  /* transform: rotateX(30deg) !important; */
-  transition: opacity 1s, visibility 0.2s !important;
-}
-
-.liist1-topp-nav {
-  padding: 7px 20px;
-  /* margin-top: 3%; */
-  opacity: 0;
-  display: none;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 35;
-  width: 65px;
-  position: absolute;
-  right: 23%;
-  visibility: hidden !important;
-  /* transform: rotateX(30deg) !important; */
-  transition: opacity 1s, visibility 0.2s !important;
-}
-
-li.pointtt-ttop-nav {
-  padding: 18% 1% 15% 1%;
-}
-
-.llinkthis {
-  color: black !important;
-}
-
-.llinkthis:hover {
-  color: rgb(219, 14, 14) !important;
-}
-
-
-.list-bar1-widtHhigh {
-  display: flex;
-  width: 60%;
-}
-
-.point1-top-bar {
-  width: 50%;
-}
-
-.point1-top-bar a {
-  color: #fff;
-  display: inline-block;
-  font-size: 14px;
-  text-transform: capitalize;
-}
-
-.point2-top-bar a {
-  color: #fff;
-  font-size: 14px;
-  text-transform: capitalize;
-}
-
-.list-bar2-widtHhigh {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-  padding-right: 8%;
-}
-
-.point2-top-bar {
-  width: 25%;
-  display: flex;
-  align-items: center;
-}
-
-i.fa-solid.fa-house {
-  font-size: 13px;
-  color: white;
-}
-
-i.fa-solid.fa-circle-question {
-  font-size: 13px;
-  color: white;
-}
-
-i.fa-solid.fa-headset {
-  font-size: 13px;
-  color: white;
-}
-
-i.fa-solid.fa-lock {
-  font-size: 13px;
-  color: white;
-}
-
-i.fa-solid.fa-circle-check {
-  font-size: 13px;
-  color: white;
-}
-
-.button-1 {
-  height: 100%;
-  width: 20%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.button-plus {
-  font-size: 22px;
-  color: white;
-  background-color: blue;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.buttonplus {
-  font-size: 22px;
-  color: white;
-}
-
-.your-brofile {
-  width: 10%;
-  height: 100%;
-}
-
-.William-Words {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  align-items: center;
-}
-
-a.dropbtn {
-  border: 1px solid white;
-  background: #63633a8f;
-  border-radius: 35%;
-  padding: 13% 15%;
+.vector-img-logo {
   transition: 2s;
 }
 
-a.dropbtn:hover {
-  background: green !important;
-  border-radius: 35%;
-  color: darkblue;
-  padding: 13% 15%;
-}
-
-h1.border-William {
-  font-size: 17px;
-  color: white;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #827ddd;
-  width: 16%;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  border-radius: 2.5rem;
-  z-index: 1;
-  right: 6%;
-  top: 5%;
-}
-
-.padding-content {
-  padding: 1% 7% 1% 7%;
-  border: 5px solid yellowgreen;
-  border-radius: 2.5rem;
-}
-
-.padding-content>span {
-  font-size: 15px;
-  font-weight: bold;
-  padding: 0 30px;
-  color: #9edf1a;
-}
-
-.padding-content>a {
-  color: #131214;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: normal;
-  padding: 2% 18% 0;
-}
-
-.padding-content>ul {
-  border-top: 4px solid rgb(145 9 9 / 10%);
-  font-size: 15px;
-  font-weight: 400;
-  margin-top: 6%;
-  padding-top: 6%;
-}
-
-.padding-content>ul li {
-  color: #e5d612;
-  display: inline-block;
-  font-size: 16px;
-  margin-bottom: 8px;
-  padding-left: 15px;
-  width: 95%;
-}
-
-.padding-content>ul li a:nth-child(1n) {
-  display: flex;
-  justify-content: space-between;
-}
-
-span.badge {
-  background-color: red;
-  border-radius: 50%;
-  width: 15%;
-  display: flex;
-  justify-content: center;
-  color: #fff !important;
-}
-
-.menu-2 {
-  z-index: 10;
-}
-
-a#sign {
-  display: block;
-}
-
-.show {
-  display: block;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky+.slider {
-  padding-top: 10px;
-}
-
-header {
-  width: 90%;
-  /* margin-left: 5%; */
-  display: flex;
-  background-color: white;
-  z-index: 999;
-  box-shadow: 0 7px 14px -6px #dedede;
-}
-
-.HEADER-IMG {
-  width: 100%;
-  display: flex;
-  margin-left: 8%;
-}
-
-.img-header {
-  width: 9% !important;
-  display: flex;
-  justify-content: center;
-}
-
-.img-header a {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  transition: 3s;
-}
-
-.img-header a:hover {
-  color: red;
+.vector-img-logo:hover {
   transform: rotate(357deg);
 }
 
-.img-logo {
-  width: 65% !important;
-  border-radius: 50%;
-}
-
-.point-top-Nav,
-.point1-top-Nav,
-.point2-top-Nav,
-.point3-top-Nav,
-.point4-top-Nav,
-.point5-top-Nav {
-  font-size: 17px;
-  color: whitesmoke;
-  border-bottom: 1px solid white;
-  padding: 10px 10px 10px 20px;
-
-}
-
-.link-Nav {
-  font: caption;
+#container-fluid {
   position: relative;
+  background-color: rgb(0 0 0 / 28%);
+  border-top: 2px solid #b680e7;
+  padding: 0;
+  z-index: 99999999999;
+}
+
+.flex-new {
+  flex-direction: inherit;
+}
+
+li.width {
+  width: 40%;
   display: flex;
+  justify-content: center;
+}
+
+div#navbarSupported {
+  width: 50%;
+  display: flex;
+}
+
+form#d-flex {
+  width: 50%;
+  padding: 0% 3% 0% 0%;
+}
+
+svg#icon-lock,
+svg#icon-check {
+  margin-right: 8%;
+  font-size: 18px;
+}
+
+.button-post {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blueviolet;
+  border-radius: 5%;
+  border: 1px solid burlywood;
+  color: white;
+  font-size: 18px;
+  transition: 1s;
+}
+
+.button-post:hover {
+  background-color: rgb(69, 9, 126);
+  color: #a3f9f9;
+}
+
+div#navbarSupportedContent {
+  width: 50%;
+  flex-grow: 0;
+}
+
+.container-floid {
   width: 100%;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
-
-.list1-top-nav,
-.list2-top-nav,
-.list3-top-nav,
-.list4-top-nav,
-.list5-top-nav {
-  padding: 7px 20px;
-  /* margin-top: 3%; */
-  display: none;
+.whatsapp {
+  width: 20%;
 }
 
-.point1-top-Nav:hover .list1-top-nav {
-  display: block;
+.Whatsapp1 {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.point2-top-Nav:hover .list2-top-nav {
-  display: block;
+span.whatsapp2 {
+  border-radius: 50%;
+  border: 2px solid #343464;
+  background-color: turquoise;
+  width: 20%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.point3-top-Nav:hover .list3-top-nav {
-  display: block;
+svg.svg-inline--fa.fa-phone {
+  font-size: 20px;
+  color: revert;
 }
 
-.point4-top-Nav:hover .list4-top-nav {
-  display: block;
+div#what-sapp {
+  width: 75%;
 }
 
-.point5-top-Nav:hover .list5-top-nav {
-  display: block;
+p.whatsapp3,
+span.span-phone {
+  font-size: 19px;
 }
 
-.point-top-nav {
-  padding-bottom: 8%;
+.display-flex-aney-top,
+.SliderTopImage {
+  position: relative;
+  width: 100%;
+  height: 560px;
 }
 
-section.slider-website-home1,
-.Slider1.fade,
-.image-tihs,
-img.image-hear {
+.imageSlider {
+  content: "";
+  position: absolute;
   width: 100%;
   height: 550px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transform: rotateX(355deg);
 }
 
-.fade {
-  animation-name: fade;
+.background-image-1 {
+  background-image: url(/img/featured-avatar.jpeg);
+}
+
+.background-image-2 {
+  background-image: url(/img/featured-avatar5.jpeg);
+}
+
+.background-image-3 {
+  background-image: url(/img/featured-avatar-click.jpg);
+}
+
+button#gototop {
+  width: 4%;
+  height: 45px;
+  position: fixed;
+  bottom: 20px;
+  right: 3px;
+  font-size: 25px;
+  border: none;
+  outline: none;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+button#gototop:hover {
+  background-color: red;
+}
+
+.Words-slider-top {
+  width: 100%;
+  height: 75%;
+  position: absolute;
+  top: 12%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.words-sliders-top {
+  position: absolute;
+  left: 5%;
+  padding: 0.5% 5%;
+  background-color: rgba(0 0 0 /30%);
+}
+
+.p-slider-top {
+  width: 70%;
+  font-size: 22px;
+}
+
+#link-click-slider-top {
+  border: none;
+  outline: none;
+  background: none;
+  width: 20%;
+  height: 40px;
+  font-size: 18px;
+}
+
+#link-click-go-to {
+  border: none;
+  outline: none;
+  background: none;
+  width: 60%;
+  height: 40px;
+  font-size: 18px;
+}
+
+#link-click-slider {
+  width: 100%;
+  height: 100%;
+  background-color: #0dcaf0;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 2s;
+  text-decoration: none;
+  border-radius: 2.5rem;
+}
+
+#link-click-slider:hover {
+  background-color: #4444ec;
+  color: white;
+}
+
+#sectionClickSlider {
+  position: absolute;
+  top: 2%;
+  right: 5%;
+}
+
+.Fade {
+  animation-name: Fade;
   animation-duration: 1.5s;
 }
 
-@keyframes fade {
+@keyframes Fade {
   from {
     opacity: .4
   }
@@ -533,150 +306,81 @@ img.image-hear {
   }
 }
 
-.slider-website-home2,
-.slider {
-  width: 95%;
-  height: 100%;
-  margin-left: 2.5%;
-}
-
-.Slider1.fade,
-.image-tihs,
-.slider-button,
-.list-drop-dowen {
-  position: relative;
-}
-
-img.image-hear {
-  border-radius: 1.5rem;
-}
-
-section#section {
-  color: white;
-  font-size: 18px;
-  top: 40%;
+.footer-bootstrap-v5 {
   width: 100%;
-  height: 100%;
-  position: absolute;
+  background-color: rgb(13, 202, 240);
 }
 
-.section-position-hear {
-  display: flex;
-  justify-content: center;
+.textcenter>div {
+  width: 95%;
+  margin-left: 2.5%;
+  align-items: center;
+}
+
+.logo-footer.mt-3.mb-3 {
   width: 50%;
 }
 
-.section-position-this,
-.slider-word1-special,
-.slider-word,
-.slider2 {
-  width: 75%;
+.logo-footer img {
+  width: 40%;
 }
 
-.slider-word {
-  font-size: 19px;
-  line-height: 50px;
-  margin: 5% 0;
+.image-link-one>img {
+  width: 95%;
+  height: 50px;
 }
 
-p.position1 {
-  font-size: 52px;
-  color: #FFF3DA;
-  text-decoration-line: underline;
+.h2ourpage {
+  font-size: 26px;
 }
 
-h1.slider1 {
-  font-size: 55px;
-  color: #071952;
-  text-decoration-line: underline;
+.word-footermb-3,
+.link-terms-servicemb-3,
+.link-Privacy-Policymb-3 {
+  width: 33%;
 }
 
-h3.slider1 {
-  color: #504099;
-  font-size: 30px;
-  text-decoration-line: underline;
-}
-
-p.slider1 {
-  font-size: 55px;
-  color: #FFF3DA;
-  text-decoration-line: underline;
-}
-
-.slider2 {
-  margin: 4% 0;
-}
-
-p.slider-word-p {
-  color: #00eff1;
-  font-weight: 600;
-}
-
-a.slider3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #a0bdaf;
-  color: #051edd;
-  height: 35px;
-  width: 25%;
-  border-radius: 0.5rem;
-  transition: 1s;
-}
-
-a.slider3:hover {
-  transform: translateY(-6px);
-}
-
-li.button-slider {
-  height: 40px;
-}
-
-.slider-button,
-.list-drop-dowen {
-  float: right;
-  width: 25%;
-  height: 30px;
-  top: 25%;
-  right: 5%;
-  margin-right: 1%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-}
-
-.button-slider,
-.button-drop-dowen {
-  display: flex;
-  width: 95px;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  background-color: #4D3C77;
-  transition: 3s;
-}
-
-#onclick1-spicial,
-#onclick2-spicial,
-#onclick3-spicial,
-.dropdownher {
-  display: flex;
+.goto-like-top {
   width: 100%;
   height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #793FDF;
-  color: #FFFD8C;
-  transition: 1s;
+  background-color: blue;
+  color: white;
+  border-radius: 2.5rem;
+  transition: 2s;
 }
 
-#onclick1-spicial:hover,
-#onclick2-spicial:hover,
-#onclick3-spicial:hover {
-  color: #FFF5E0;
-  background-color: #5C8374;
-  transform: translateY(-6px);
+.goto-like-top:hover {
+  background-color: rgba(0, 0, 255, 0.39);
+  color: blue;
+}
+
+.ABOUT-US-OURPAES {
+  width: 33%;
+}
+
+.goto-like-page {
+  width: 40%;
+  height: 55px;
+  background-color: #8a2be247;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: 2s;
+}
+
+.goto-like-page:hover {
+  background-color: #4336e97a;
+}
+
+svg.svg-inline--fa.fa-facebook-f,
+svg.svg-inline--fa.fa-twitter,
+svg.svg-inline--fa.fa-instagram {
+  font-size: 35px !important;
+  color: black !important;
 }
 
 .SECTIONONE,
@@ -873,7 +577,7 @@ h5.aboutofcar {
 
 .control1car,
 .contro21car {
- width: 80%;
+  width: 80%;
 }
 
 i.fa-solid.fa-key,
@@ -1310,7 +1014,7 @@ span.day-car::before {
 img.img2-car {
   border-radius: 50%;
   border: 2px solid wheat;
-  width: 100%;
+  width: 60%;
 }
 
 .rentals-car2 {
@@ -1506,7 +1210,7 @@ section.this-brand-car-web {
   width: 84px;
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #c5bdd573 0%, rgb(119 82 245 / 0%) 100%) ;
+  background: linear-gradient(to right, #c5bdd573 0%, rgb(119 82 245 / 0%) 100%);
   z-index: 2;
 }
 
@@ -3439,25 +3143,7 @@ a.link-tow-words-driver:hover {
 
 
 /* brofile driver / */
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 60px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
 
-#myBtn:hover {
-  background-color: #555;
-}
 
 section.icons-placeholder {
   width: 100%;
@@ -3513,149 +3199,3 @@ p.p-place {
   font-size: 20px;
   color: #9278dd;
 }
-
-footer#footer-of-page {
-  width: 100%;
-  border-top: 2px solid #00000070;
-  margin-top: 2%;
-  padding: 2% 0;
-}
-
-.section-footer {
-  width: 93%;
-  margin-left: 3.5%;
-  margin-top: 1%;
-  background-color: #c5fdf3;
-  border-radius: 2.5rem;
-  padding: 1% 0;
-}
-
-.footer-section-page {
-  width: 97%;
-  margin-left: 1.5%;
-  display: flex;
-  justify-content: center;
-}
-
-.partion-top-of-TOWIENS{
-display: block;
-width: 50%;
-}
-
-.partion-this-one {
-  width: 70%;
-}
-
-.img-logo-footer{
-  width: 100%;
-}
-
-.partion-bottom-of-only{
-  width: 40%;
-}
-
-img.download-this-link-from-img{
-  width: 95%;
-  height: 100%;
-}
-
-ul.list-download-links {
-  display: flex;
-  justify-content: space-between;
-}
-
-li.box-download-link{
-  height: 45px;
-}
-
-a.download-this-link {
-  display: flex;
-  height: 100%;
-  width: 100%;
-}
-
-.partion-this-five {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.type-list-four{
-  font-size: 15px;
-  width: 45%;
-  line-height: 30px;
-}
-
-h2.h2ourpage {
-  color: #a587de;
-}
-
-.h2ourpage a{
-  transition: 1.5s;
-}
-
-.h2ourpage a:hover{
-  color: #004382;
-}
-
-.partion-this-sex{
-  display: flex;
-  align-items: center;
-  margin-top: 1.5%;
-}
-
-.type-list-five,
-.downlist__footer{
-  width: 50%;
-}
-
-ul.this-list-terms-policy{
-  display: flex;
-  justify-content: space-around;
-  width: 80%;
-  margin: 0;
-}
-
-li.ABOUT-US-TERMS-POLICY {
-  width: 38%;
-  height: 30px;
-  font-size: 20px;
-}
-
-li.ABOUT-US-OURPAES {
-  font-size: 40px;
-  height: 55px;
-  width: 45px;
-}
-
-.downlistfooter {
-  width: 55%;
-}
-
-ul.this-list-ourpages {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-a.goto-like-top{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #0000ff36;
-  border-radius: 2.5rem;
-  transition: 1.5s;
-}
-
-a.goto-like-top:hover{
-  background-color: #4f4f9136;
-  color: blue;
-  transform: translateY(-6px);
-  }
-
-  h2.h2terms-policy{
-    padding: 0 0 0 10%;
-    font-size: 16px;
-  }
