--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,16 @@
-/* simple*/
+/* simple max-width: 100%;
+    height: auto;*/
 @media screen and (max-width:375px) and (min-width:280px) {
+  svg.svg-inline--fa.fa-key,
+  svg.svg-inline--fa.fa-handshake,
+  svg.svg-inline--fa.fa-star{
+    font-size: 25px;
+  }
+
+  svg.svg-inline--fa.fa-user {
+    font-size: 50px;
+  }
+ 
   .Bar {
     display: flex;
     height: 100%;
@@ -236,6 +247,10 @@
     width: 20%;
   }
 
+  img.img2-car{
+    width: 80%;
+  }
+
   .passenger3,
   .daily,
   .rentals-car,
@@ -256,18 +271,18 @@
   }
 
   .condition1 {
-    width: 90%;
-    margin: 2% 5%;
+    width: 100%;
+    margin: 0;
   }
 
   p.passenger1 {
-    width: 90%;
+    width: 100%;
     font-size: 15px;
-    padding: 5%;
+    padding: 2% 5%;
   }
 
   div#links-condition {
-    width: 80%;
+    width: 60%;
     margin-top: 5%;
   }
 
@@ -414,15 +429,19 @@
   h1.saysaboutus,
   p.myname,
   p.pofyou {
-    font-size: 15px;
+    font-size: 13px;
   }
 
   p.pofyou {
     line-height: 24px;
   }
 
+  svg.svg-inline--fa.fa-user {
+    font-size: 60px;
+  }
+
   .rightandleft-slider {
-    top: 46%;
+    top: 35%;
   }
 
   span.imgclients {
@@ -432,6 +451,10 @@
   li.starclient {
     width: 6%;
     margin: 0 -21px;
+  }
+
+  a.prevcients {
+    left: 4%;
   }
 
   .conteainer {
@@ -1574,6 +1597,19 @@
     display: none;
   }
 
+  #link-click-go-to{
+    width: 70%;
+    margin-top: 1%;
+  }
+
+  a.goto-like-top {
+    font-size: 14px;
+  }
+
+  a.goto-like-page {
+    width: 100%;
+}
+
 }
 
 @media screen and (max-width:414px) and (min-width:375px) {
@@ -1863,8 +1899,12 @@
     line-height: 23px;
   }
 
+  svg.svg-inline--fa.fa-user {
+    font-size: 55px;
+  }
+
   .rightandleft-slider {
-    top: 52%;
+    top: 35%;
   }
 
   .icon1-car,
@@ -1878,14 +1918,15 @@
   }
 
   .condition1 {
-    width: 85%;
-    margin-left: 7.5%;
+    width: 100%;
+    margin-left: 0%;
     display: block;
   }
 
   p.passenger1 {
     font-size: 20px;
-    width: 99%;
+    width: 100%;
+    padding: 2% 5%;
   }
 
   div#links-condition {
@@ -1943,6 +1984,10 @@
   span.svg-car {
     width: 19%;
     height: 32px;
+  }
+
+  img.img2-car {
+    width: 40%;
   }
 
   .lastercar2,
@@ -2975,6 +3020,19 @@
     display: none;
   }
 
+  #link-click-go-to{
+    width: 60%;
+    margin-top: 1%;
+  }
+
+  a.goto-like-top {
+    font-size: 14px;
+  }
+
+  a.goto-like-page {
+    width: 100%;
+  }
+
 }
 
 @media screen and (max-width:540px) and (min-width:414px) {
@@ -3270,6 +3328,10 @@
     margin: 0 -2px;
   }
 
+  a.prevcients {
+    left: 4%;
+  }
+
   .starclient img {
     width: 100%;
   }
@@ -3278,13 +3340,18 @@
     font-size: 105px !important;
   }
 
+  svg.svg-inline--fa.fa-user {
+    font-size: 60px;
+  }
+
   .rightandleft-slider {
-    top: 50%;
+    top: 35%;
   }
 
   .condition1 {
     display: block;
-    margin-left: 7%;
+    width: 100%;
+    margin-left: 0%;
   }
 
   p.passenger1 {
@@ -3363,8 +3430,8 @@
   }
 
   .carlatest {
-    width: 90%;
-    margin-left: 4%;
+    width: 100%;
+    margin-left: 0%;
     padding: 2% 1%;
   }
 
@@ -3442,6 +3509,7 @@
   img.img2-car {
     border-radius: 50%;
     border: 2px solid wheat;
+    width: 50%;
   }
 
   .rentals-car2 {
@@ -3507,7 +3575,7 @@
     padding: 3% 0;
   }
 
-  .container {
+  .width-new {
     width: 100%;
     margin-left: 0%;
   }
@@ -4650,6 +4718,19 @@
     display: none;
   }
 
+  #link-click-go-to{
+    width: 60%;
+    margin-top: 1%;
+  }
+
+  a.goto-like-top {
+    font-size: 14px;
+  }
+
+  a.goto-like-page {
+    width: 100%;
+  }
+
 }
 
 @media screen and (max-width:820px) and (min-width:540px) {
@@ -5009,6 +5090,10 @@
     margin: -15px 1%;
   }
 
+  a.prevcients {
+    left: 4%;
+  }
+
   .starclient img {
     width: 100%;
   }
@@ -5029,8 +5114,12 @@
     line-height: 25px;
   }
 
+  svg.svg-inline--fa.fa-user {
+    font-size: 60px;
+  }
+
   .rightandleft-slider {
-    top: 58%;
+    top: 35%;
   }
 
   .condition1,
@@ -5115,8 +5204,8 @@
   }
 
   .carlatest {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left: 0%;
   }
 
   .lastercar1 {
@@ -5191,6 +5280,7 @@
   img.img2-car {
     border-radius: 50%;
     border: 2px solid wheat;
+    width: 20%;
   }
 
   .rentals-car2 {
@@ -5361,16 +5451,16 @@
   }
 
   .space.no-top {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left: 0%;
     background-color: #c5fdf3;
     border-radius: 2.5rem;
     padding: 3% 0;
   }
 
-  .container {
-    width: 90%;
-    margin-left: 5%;
+  .width-new {
+    width: 100%;
+    margin-left: 0%;
   }
 
   .row {
@@ -6409,6 +6499,10 @@
     display: none;
   }
 
+  a.goto-like-page {
+    width: 100%;
+  }
+
 }
 
 @media screen and (max-width:912px) and (min-width:820px) {
@@ -6769,6 +6863,10 @@
     margin: -6px 1px;
   }
 
+  a.prevcients {
+    left: 4%;
+  }
+
   .starclient img {
     width: 100%;
   }
@@ -6948,8 +7046,8 @@
   }
 
   .carlatest {
-    width: 95%;
-    margin-left: 2.5%;
+    width: 100%;
+    margin-left: 0%;
   }
 
   .lastercar1 {
@@ -7087,14 +7185,14 @@
   }
 
   .space.no-top {
-    width: 95%;
-    margin-left: 2.5%;
+    width: 100%;
+    margin-left: 0%;
     background-color: #c5fdf3;
     border-radius: 2.5rem;
     padding: 3% 0;
   }
 
-  .container {
+  .width-new {
     width: 100%;
     margin-left: 0%;
   }
@@ -7134,7 +7232,7 @@
   }
 
   .rider-avatar {
-    width: 30%;
+    width: 25%;
   }
 
   .rider-avatar img {
@@ -7146,7 +7244,7 @@
 
   .rider-meta {
     position: relative;
-    width: 55%;
+    width: 70%;
   }
 
   .rider-meta a {
@@ -8512,6 +8610,10 @@
     margin: -5px 0%;
   }
 
+  a.prevcients {
+    left: 4%;
+  }
+
   .starclient img {
     width: 100%;
   }
@@ -8648,6 +8750,10 @@
     border-radius: 2.5rem;
   }
 
+  .rides  .priveat-new {
+    width: 24% !important;
+  }
+
   .register {
     display: flex;
     width: 90%;
@@ -8687,8 +8793,8 @@
   }
 
   .carlatest {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left: 0%;
   }
 
   .lastercar1 {
@@ -8704,8 +8810,8 @@
   }
 
   .rentalscar {
-    width: 90%;
-    margin-left: 5%;
+    width: 95%;
+    margin-left: 3%;
   }
 
   .MEDIA {
@@ -8826,14 +8932,14 @@
   }
 
   .space.no-top {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left: 0%;
     background-color: #c5fdf3;
     border-radius: 2.5rem;
     padding: 3% 0;
   }
 
-  .container {
+  .width-new {
     width: 100%;
     margin-left: 0%;
   }
@@ -9877,6 +9983,10 @@
     margin-left: 2.5%;
   }
 
+  a.prevcients {
+    left: 4%;
+  }
+
   p.passenger1 {
     width: 55%;
     font-size: 20px;
@@ -9997,6 +10107,10 @@
     padding: 2%;
   }
 
+  .rides .priveat-new {
+    width: 24% !important;
+  }
+
   .register {
     width: 100%;
     margin-left: 0%;
@@ -10099,21 +10213,22 @@
   }
 
   .space.no-top {
-    width: 95%;
-    margin-left: 2.5%;
+    width: 100%;
+    margin-left: 0%;
     padding: 0;
   }
 
-  .container {
+  .width-new {
     padding: 2%;
-    width: 95;
-    margin-left: 2.5%;
+    width: 100%;
+    margin-left: 0;
   }
 
-  .row {
+  .priveat-new-row {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-left: 0.2%;
   }
 
   .col-md-1,
@@ -10961,8 +11076,8 @@
   }
 
   .carlatest {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left: 0%;
   }
 
   .lastercar1 {
@@ -11109,16 +11224,16 @@
   }
 
   .space.no-top {
-    width: 93%;
-    margin-left: 3.5%;
+    width: 100%;
+    margin-left:0;
     background-color: #c5fdf3;
     border-radius: 2.5rem;
     padding: 3% 0;
   }
 
-  .container {
-    width: 90%;
-    margin-left: 5%;
+  .width-new {
+    width: 100%;
+    margin-left: 0;
   }
 
   .row {
@@ -11732,9 +11847,9 @@
   }
 
   .rentalscar,
-  .container {
-    width: 95%;
-    margin-left: 2.5%;
+  .width-new {
+    width: 100%;
+    margin-left: 0%;
   }
 
   .link1-section,
@@ -12186,31 +12301,6 @@
   .image-tihs,
   img.image-hear {
     height: 770px;
-  }
-
-  .background1-image::before,
-  .background2-image::before,
-  .background3-image::before {
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: top;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    content: "";
-    border-radius: 1.5rem;
-  }
-
-  .background1-image::before {
-    background-image: url(./img/featured-avatar.jpg);
-  }
-
-  .background2-image::before {
-    background-image: url(./img/featured-avatar5.jpg);
-  }
-
-  .background3-image::before {
-    background-image: url(./img/fbrandless-moder-car_110488-502.avif);
   }
 
   section#section {
@@ -16313,6 +16403,7 @@
   .words-sliders-top {
       left: 0.5%;
   }
+
 }
 
 @media screen and (max-width: 870px) and (min-width:280px) {
@@ -16325,4 +16416,8 @@
   #link-click-slider-top {
       width: 30%;
   }
+}
+
+@media screen and (max-width: 763px) {
+  
 }
